--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ after_build:
 test:
   assemblies: test\unit\RgbLedSequencerLibraryTests\bin\Release\RgbLedSequencerLibraryTests.dll
 after_test:
-  - cmd: packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user "-filter:+[*]* -[*Tests]*" -target:packages\xunit.runner.console.2.2.0\tools\xunit-console.exe -targetargs:"test\unit\RgbLedSequencerLibraryTests\bin\Release\RgbLedSequencerLibraryTests.dll -noshadow -appveyor" -excludebyattribute:*.ExcludeFromCodeCoverage* -excludebyfile:*Designer.cs -output:coverage.xml
+  - cmd: packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user "-filter:+[*]* -[*Tests]*" -target:packages\xunit.runner.console.2.2.0\tools\xunit.console.exe -targetargs:"test\unit\RgbLedSequencerLibraryTests\bin\Release\RgbLedSequencerLibraryTests.dll -noshadow -appveyor" -excludebyattribute:*.ExcludeFromCodeCoverage* -excludebyfile:*Designer.cs -output:coverage.xml
   - cmd: packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
 cache:
   - packages -> **\packages.config
