--- a/test/unit/RgbLedSequencerLibraryTests/packages.config
+++ b/test/unit/RgbLedSequencerLibraryTests/packages.config
@@ -13,6 +13,7 @@
   <package id="OpenCover" version="4.6.519" targetFramework="net462" />
   <package id="ReportGenerator" version="2.5.5" targetFramework="net462" />
   <package id="SemanticComparison" version="3.50.2" targetFramework="net462" />
+  <package id="SlowCheetah" version="2.5.48" targetFramework="net462" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net462" developmentDependency="true" />
   <package id="xunit" version="2.2.0" targetFramework="net462" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net462" />
