--- a/src/RgbLedSequencerLibrary/RgbLedSequencerLibrary.csproj
+++ b/src/RgbLedSequencerLibrary/RgbLedSequencerLibrary.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E1EE2BB5-34E1-45D8-AE84-A10F9251EF1B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RgbLedSequencerLibrary</RootNamespace>
-    <AssemblyName>RgbLedSequencerLibrary</AssemblyName>
+    <RootNamespace>Natsnudasoft.RgbLedSequencerLibrary</RootNamespace>
+    <AssemblyName>Natsnudasoft.RgbLedSequencerLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -21,7 +21,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>RgbLedSequencerLibrary.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Debug\RgbLedSequencerLibrary.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Natsnudasoft.RgbLedSequencerLibrary.xml</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,7 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>RgbLedSequencerLibrary.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Release\RgbLedSequencerLibrary.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Natsnudasoft.RgbLedSequencerLibrary.xml</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup>
@@ -46,6 +46,10 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Natsnudasoft.NatsnudaLibrary, Version=0.3.0.0, Culture=neutral, PublicKeyToken=b0f282eb5a9064bb, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NatsnudaLibrary.0.3.0\lib\net46\Natsnudasoft.NatsnudaLibrary.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -61,12 +65,11 @@
       <Link>Properties\AssemblyInfoCommon.cs</Link>
     </Compile>
     <Compile Include="BaudRateValidator.cs" />
-    <Compile Include="CommandInterface\CommandProgress.cs" />
-    <Compile Include="CommandInterface\IRgbLedSequencer.cs" />
-    <Compile Include="CommandInterface\RgbLedSequencer.cs" />
+    <Compile Include="CommandProgress.cs" />
+    <Compile Include="IRgbLedSequencer.cs" />
+    <Compile Include="RgbLedSequencer.cs" />
     <Compile Include="SerialPortElement.cs" />
     <Compile Include="IRgbLedSequencerConfiguration.cs" />
-    <Compile Include="ParameterValidation.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -74,20 +77,19 @@
     </Compile>
     <Compile Include="LedGrayscale.cs" />
     <Compile Include="DotCorrectionData.cs" />
-    <Compile Include="CommandInterface\IPicaxeCommandInterface.cs" />
+    <Compile Include="IPicaxeCommandInterface.cs" />
     <Compile Include="ISerialPortAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LedDotCorrection.cs" />
-    <Compile Include="CommandInterface\PicaxeCommandInterface.cs" />
+    <Compile Include="PicaxeCommandInterface.cs" />
     <Compile Include="GrayscaleData.cs" />
     <Compile Include="RgbLedSequencerSection.cs" />
     <Compile Include="SequenceData.cs" />
-    <Compile Include="CommandInterface\SendInstruction.cs" />
-    <Compile Include="CommandInterface\ReceiveInstruction.cs" />
+    <Compile Include="SendInstruction.cs" />
+    <Compile Include="ReceiveInstruction.cs" />
     <Compile Include="SerialPortAdapter.cs" />
     <Compile Include="SequenceStep.cs" />
-    <Compile Include="CommandInterface\UnexpectedInstructionException.cs" />
-    <Compile Include="ValidatedNotNullAttribute.cs" />
+    <Compile Include="UnexpectedInstructionException.cs" />
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json">
