--- a/src/RgbLedSequencerLibrary/packages.config
+++ b/src/RgbLedSequencerLibrary/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="codecracker.CSharp" version="1.0.2" targetFramework="net46" developmentDependency="true" />
   <package id="Menees.Analyzers" version="1.1.1.0" targetFramework="net46" developmentDependency="true" />
+  <package id="NatsnudaLibrary" version="0.3.0" targetFramework="net46" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
 </packages>
