--- a/test/unit/RgbLedSequencerLibraryTests/packages.config
+++ b/test/unit/RgbLedSequencerLibraryTests/packages.config
@@ -10,6 +10,8 @@
   <package id="coveralls.io" version="1.3.4" targetFramework="net46" developmentDependency="true" />
   <package id="Menees.Analyzers" version="1.1.1.0" targetFramework="net46" developmentDependency="true" />
   <package id="Moq" version="4.7.1" targetFramework="net46" />
+  <package id="NatsnudaLibrary" version="0.3.0" targetFramework="net46" />
+  <package id="NatsnudaLibrary.TestExtensions" version="0.3.0" targetFramework="net46" />
   <package id="OpenCover" version="4.6.519" targetFramework="net46" developmentDependency="true" />
   <package id="ReportGenerator" version="2.5.6" targetFramework="net46" developmentDependency="true" />
   <package id="SemanticComparison" version="3.50.2" targetFramework="net46" />
