--- a/test/unit/RgbLedSequencerLibraryTests/packages.config
+++ b/test/unit/RgbLedSequencerLibraryTests/packages.config
@@ -1,26 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Albedo" version="1.0.2" targetFramework="net462" />
-  <package id="AutoFixture" version="3.50.2" targetFramework="net462" />
-  <package id="AutoFixture.AutoMoq" version="3.50.2" targetFramework="net462" />
-  <package id="AutoFixture.Idioms" version="3.50.2" targetFramework="net462" />
-  <package id="AutoFixture.Xunit2" version="3.50.2" targetFramework="net462" />
-  <package id="Castle.Core" version="4.0.0" targetFramework="net462" />
-  <package id="codecracker.CSharp" version="1.0.1" targetFramework="net462" developmentDependency="true" />
-  <package id="coveralls.io" version="1.3.4" targetFramework="net462" />
-  <package id="Menees.Analyzers" version="1.1.1.0" targetFramework="net462" />
-  <package id="Moq" version="4.7.1" targetFramework="net462" />
-  <package id="OpenCover" version="4.6.519" targetFramework="net462" />
-  <package id="ReportGenerator" version="2.5.5" targetFramework="net462" />
-  <package id="SemanticComparison" version="3.50.2" targetFramework="net462" />
-  <package id="SlowCheetah" version="2.5.48" targetFramework="net462" />
-  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net462" developmentDependency="true" />
-  <package id="xunit" version="2.2.0" targetFramework="net462" />
-  <package id="xunit.abstractions" version="2.0.1" targetFramework="net462" />
-  <package id="xunit.assert" version="2.2.0" targetFramework="net462" />
-  <package id="xunit.core" version="2.2.0" targetFramework="net462" />
-  <package id="xunit.extensibility.core" version="2.2.0" targetFramework="net462" />
-  <package id="xunit.extensibility.execution" version="2.2.0" targetFramework="net462" />
-  <package id="xunit.runner.console" version="2.2.0" targetFramework="net462" developmentDependency="true" />
-  <package id="xunit.runner.visualstudio" version="2.2.0" targetFramework="net462" developmentDependency="true" />
+  <package id="Albedo" version="1.0.2" targetFramework="net46" />
+  <package id="AutoFixture" version="3.50.2" targetFramework="net46" />
+  <package id="AutoFixture.AutoMoq" version="3.50.2" targetFramework="net46" />
+  <package id="AutoFixture.Idioms" version="3.50.2" targetFramework="net46" />
+  <package id="AutoFixture.Xunit2" version="3.50.2" targetFramework="net46" />
+  <package id="Castle.Core" version="4.0.0" targetFramework="net46" />
+  <package id="codecracker.CSharp" version="1.0.2" targetFramework="net46" developmentDependency="true" />
+  <package id="coveralls.io" version="1.3.4" targetFramework="net46" developmentDependency="true" />
+  <package id="Menees.Analyzers" version="1.1.1.0" targetFramework="net46" developmentDependency="true" />
+  <package id="Moq" version="4.7.1" targetFramework="net46" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net46" developmentDependency="true" />
+  <package id="ReportGenerator" version="2.5.6" targetFramework="net46" developmentDependency="true" />
+  <package id="SemanticComparison" version="3.50.2" targetFramework="net46" />
+  <package id="SlowCheetah" version="2.5.48" targetFramework="net46" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="xunit" version="2.2.0" targetFramework="net46" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net46" />
+  <package id="xunit.assert" version="2.2.0" targetFramework="net46" />
+  <package id="xunit.core" version="2.2.0" targetFramework="net46" />
+  <package id="xunit.extensibility.core" version="2.2.0" targetFramework="net46" />
+  <package id="xunit.extensibility.execution" version="2.2.0" targetFramework="net46" />
+  <package id="xunit.runner.console" version="2.2.0" targetFramework="net46" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.2.0" targetFramework="net46" developmentDependency="true" />
 </packages>
