Add sandcastle documentation project
For now the sandcastle project is set to intellisense only (to generate things like <inheritdoc/> tags) but could later be used to generate other help formats.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,16 +5,24 @@
   environment:
     COVERALLS_REPO_TOKEN:
       secure: o+iKgbcKgIodN483XdvSg7VtSMx3+P/AR2ykYvOMKJ73cy4K94NPTHv8smPZA3AI
+    STRONG_NAME_SECRET:
+      secure: 4W8bFbUP7bJsxCqGF6+xfy7kCUjQscJcrGmjegVxxBs=
   configuration: Release
   platform: Any CPU
   install:
     - choco install gitversion.portable -y
+    - choco install html-help-workshop -y
+    - nuget install secure-file -ExcludeVersion
+    - IF "%APPVEYOR_PULL_REQUEST_NUMBER%" == "" secure-file\tools\secure-file -decrypt Natsnudasoft.snk.enc -secret %STRONG_NAME_SECRET%
   before_build:
     - nuget restore
     - gitversion /l console /output buildserver /updateassemblyinfo AssemblyInfoCommon.cs /b %APPVEYOR_REPO_BRANCH%
   build:
     project: RgbLedSequencerLibrary.sln
     verbosity: minimal
+    
+    
+    
   after_build:
     - call tools\prepare-artifacts.bat
   test:
@@ -44,10 +52,15 @@
   environment:
     COVERALLS_REPO_TOKEN:
       secure: o+iKgbcKgIodN483XdvSg7VtSMx3+P/AR2ykYvOMKJ73cy4K94NPTHv8smPZA3AI
+    STRONG_NAME_SECRET:
+      secure: 4W8bFbUP7bJsxCqGF6+xfy7kCUjQscJcrGmjegVxxBs=
   configuration: Release
   platform: Any CPU
   install:
     - choco install gitversion.portable -y
+    - choco install html-help-workshop -y
+    - nuget install secure-file -ExcludeVersion
+    - IF "%APPVEYOR_PULL_REQUEST_NUMBER%" == "" secure-file\tools\secure-file -decrypt Natsnudasoft.snk.enc -secret %STRONG_NAME_SECRET%
   before_build:
     - nuget restore
     - gitversion /l console /output buildserver /updateassemblyinfo AssemblyInfoCommon.cs /b %APPVEYOR_REPO_BRANCH%
