--- a/src/RgbLedSequencerLibrary/packages.config
+++ b/src/RgbLedSequencerLibrary/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="codecracker.CSharp" version="1.0.2" targetFramework="net46" developmentDependency="true" />
+  <package id="EWSoftware.SHFB" version="2017.1.28.0" targetFramework="net46" developmentDependency="true" />
+  <package id="EWSoftware.SHFB.NETFramework" version="4.6.2" targetFramework="net46" developmentDependency="true" />
   <package id="Menees.Analyzers" version="1.1.1.0" targetFramework="net46" developmentDependency="true" />
   <package id="NatsnudaLibrary" version="0.3.0" targetFramework="net46" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
