--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,9 @@
   build:
     project: RgbLedSequencerLibrary.sln
     verbosity: minimal
+    publish_nuget: true
+    publish_nuget_symbols: true
+    include_nuget_references: true
   after_build:
     - call tools\prepare-artifacts.bat
   test:
@@ -34,17 +37,33 @@
     - path: RgbLedSequencerLibrary_Release_Any_CPU.zip
       name: RgbLedSequencerLibrary_Release_Any_CPU
   deploy:
-    tag: $(APPVEYOR_REPO_TAG_NAME)
-    release: 'RgbLedSequencerLibrary $(APPVEYOR_REPO_TAG_NAME)'
-    description: ''
-    provider: GitHub
-    auth_token:
-      secure: Btb4eq03u8e4+k4WUyv4mWf0kfmzuxSCRo6u1nfOCtxlr4hrdpB5af5tVpt5q+1q
-    artifact: RgbLedSequencerLibrary_Release_Any_CPU
-    draft: false
-    prerelease: false
-    on:
-      appveyor_repo_tag: true
+    - provider: GitHub
+      tag: $(APPVEYOR_REPO_TAG_NAME)
+      release: 'RgbLedSequencerLibrary $(APPVEYOR_REPO_TAG_NAME)'
+      description: ''
+      auth_token:
+        secure: Btb4eq03u8e4+k4WUyv4mWf0kfmzuxSCRo6u1nfOCtxlr4hrdpB5af5tVpt5q+1q
+      artifact: RgbLedSequencerLibrary_Release_Any_CPU
+      draft: false
+      prerelease: false
+      on:
+        appveyor_repo_tag: true
+    - provider: NuGet
+      server: https://www.myget.org/F/rgb-led-sequencer/api/v2/package
+      api_key:
+        secure: bagqpjy5GqBb4b3uF2sJ3l13IkKA3jiMvcd1TE6k//2Mp7TyWwuNO09I8oF5Amko
+      skip_symbols: false
+      symbol_server: https://www.myget.org/F/rgb-led-sequencer/symbols/api/v2/package
+      artifact: /.*\.nupkg/
+      on:
+        appveyor_repo_tag: true
+    - provider: NuGet
+      api_key:
+        secure: F2PKDPVrMV/KTcJ6b3U0ADkG/naA2h8TnZySyuEAUAYSHbLKfUdue+SvqhZavPrp
+      skip_symbols: true
+      artifact: /.*\.nupkg/
+      on:
+        appveyor_repo_tag: true
 -
   environment:
     COVERALLS_REPO_TOKEN:
