--- a/src/RgbLedSequencerLibrary/RgbLedSequencerLibrary.csproj
+++ b/src/RgbLedSequencerLibrary/RgbLedSequencerLibrary.csproj
@@ -50,7 +50,6 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -66,11 +65,10 @@
     <Compile Include="..\..\CommonSuppressions.cs">
       <Link>CommonSuppressions.cs</Link>
     </Compile>
-    <Compile Include="BaudRateValidator.cs" />
     <Compile Include="CommandProgress.cs" />
     <Compile Include="IRgbLedSequencer.cs" />
+    <Compile Include="ISerialPortConfiguration.cs" />
     <Compile Include="RgbLedSequencer.cs" />
-    <Compile Include="SerialPortElement.cs" />
     <Compile Include="IRgbLedSequencerConfiguration.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -85,7 +83,6 @@
     <Compile Include="LedDotCorrection.cs" />
     <Compile Include="PicaxeCommandInterface.cs" />
     <Compile Include="GrayscaleData.cs" />
-    <Compile Include="RgbLedSequencerSection.cs" />
     <Compile Include="SequenceData.cs" />
     <Compile Include="SendInstruction.cs" />
     <Compile Include="ReceiveInstruction.cs" />
@@ -97,9 +94,6 @@
     <AdditionalFiles Include="..\..\stylecop.json">
       <Link>stylecop.json</Link>
     </AdditionalFiles>
-    <None Include="example-app.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
