Small clean up and hide DebuggerDisplay
Changed instances of expecting an array in constructors to instead expect an ICollection.
Hide DebuggerDisplay from intellisense.
+semver: patch

--- a/test/unit/RgbLedSequencerLibraryTests/RgbLedSequencerLibraryTests.csproj
+++ b/test/unit/RgbLedSequencerLibraryTests/RgbLedSequencerLibraryTests.csproj
@@ -115,6 +115,8 @@
       <Link>CommonSuppressions.cs</Link>
     </Compile>
     <Compile Include="CommandProgressTests.cs" />
+    <Compile Include="Helper\LedDotCorrectionCustomization.cs" />
+    <Compile Include="Helper\LedGrayscaleCustomization.cs" />
     <Compile Include="PicaxeCommandInterfaceTests.cs" />
     <Compile Include="RgbLedSequencerTests.cs" />
     <Compile Include="UnexpectedInstructionExceptionTests.cs" />
