Update to multi target .NET Standard and .NET Framework 4.6
Updated to SDK style csproj format.
Updated NuGet packages to latest versions.
Updated NuGet and GitHub auth tokens.
Removed sandcastle project and replaced with InheritdocInliner task.
Removed GitVersion from appveyor and added GitVersionTask as PackageReference.
Removed artifact creation.
Fixed InternalsVisibleTo attribute declaration for Unit Test project.
Moved unit test build server commands to MSBuild task.
Update .gitignore
+semver: minor

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
 *.bas.settings
-StyleCop.Cache
-/packages
 /.vs
 *.csproj.user
 bin
 obj
-/OpenCover
-/tools/TestResult.xml
-/tools/coverage
-/tools/results.xml
-/tools/coverage.xml
-/tools/artifact
-/docs/RgbLedSequencerLibrary/Help
+/coverage
